# agent_flow

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package.yml
aflow/: AGENTS.md  README.md  __init__.py  _test_support.py  aflow  aflow.toml  analyzer.py  cli.py  config.py  controller.py  default_config.py  git_status.py  plan.py  recovery.py  run_state.py  runlog.py  skill_installer.py  status.py  workflow.py  workflows.toml
aflow/api/: __init__.py  analyze.py  events.py  models.py  runner.py  startup.py
aflow/harnesses/: __init__.py  base.py  claude.py  codex.py  copilot.py  gemini.py  kiro.py  opencode.py  pi.py
aflow/tests/: test_aflow.py
apps/aflow_app/: README.md  package-lock.json
apps/aflow_app/server/: pyproject.toml
apps/aflow_app/server/src/aflow_app_server/: __init__.py  aflow_service.py  codex_app_server_client.py  codex_backend.py  codex_routes.py  codex_thread_gateway.py  config.py  main.py  models.py  plan_store.py  project_catalog.py  project_overrides.py  repo_registry.py  transcription.py
apps/aflow_app/server/tests/: test_api.py  test_codex_backend.py  test_codex_thread_gateway.py  test_plan_store.py  test_project_catalog.py  test_repo_registry.py  test_transcription.py
codex-ralph-loop-plugin/ralph-loop-codex/: README.md
devlog/: DEVLOG.md
extensions/: __init__.py
extensions/ralf_universal/: __init__.py  cli.py  controller.py  plan.py  run_state.py  runlog.py
opencode-ralph/plugin/: ralph.ts
plans/: aflow-config-defaults-profiles-2026-03-30.md  codex-ralf-hook-manager-2026-03-27.md  codex-ralf-plugin-port-2026-03-27.md  ralf-gemini-headless-hardening-and-extra-prompt-2026-03-16.md
ralph/: README.md  __init__.py  cli.py  controller.py  plan.py  ralph  run_state.py  runlog.py
scripts/: ralf  ralf-universal
tests/: agent.md  ralf.sh  test_aflow.py  test_assistant.py  test_cli.py  test_config.py  test_docs.py  test_harnesses.py  test_library_api.py  test_plan.py  test_ralf_codex_install.py  test_ralf_universal.py  test_retry.py  test_runtime.py  test_skill_install.py
(+81 files in other folders)
