[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aworkflow"
version = "0.1.10"
description = "Self-contained plan checkpoint controller for claude, codex, copilot, gemini, kiro, opencode, and pi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
aflow = "aflow.cli:main"
aworkflow = "aflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["aflow"]
